feat : 버튼 내용 변경

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     
     <div class="main">
         <div class="title">
-            [무끔] 숱추가 계산기
+            붙임머리 숱추가 계산기
         </div>
         <div class="subtitle">
             [무끔]Bigdata를 활용한 숱추가 예측 계산기입니다.<br>
             이제 디자이너에게 숱추가 묻지말고<br>
-            '[무끔]숱추가 예측기'로 당당하게 숱추가 요구하세요.
+            '숱추가 계산기'로 당당하게 숱추가 요구하세요.
         </div>
 
 
@@ -129,7 +129,7 @@
 
         <div id="btn_medi">
         <button type="button" onclick="submit();" value="예상 숱추가">
-        위 항목 선택 후 예상 숱 추가 확인(Touch)
+        예상 숱 추가 확인(Touch)
         </button>
         </div>
 
@@ -277,7 +277,7 @@
         
         <a id="naver" href="http://naver.me/GQ4Aaca5">
         <button type="naver_link">
-        [무끔]의 가격정보·예약·시술정보·방문자리뷰 (Touch)
+        붙임머리 가격·예약·시술정보·방문자리뷰 (Touch)
         </button>
         </a>
 
