feat : 사이트 설명 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="naver-site-verification" content="cf6096e92cd8457a2a3e7105b54de560425abcf1" />
     <title>붙임머리 숱추가 계산기</title>
-    <meta name='description' content='붙임머리 숱추가 계산기는 붙임머리 시술에 필요한 붙임머리 개수를 정확히 계산하여 자연스러운 붙임머리 시술을 도와주는 도구입니다. 숱추가 계산기는 숱추가 횟수를 파악하여 과도한 숱추가 시술을 방지할 수 있습니다. 예쁜 붙임머리와 과소비 방지를 위해 붙임머리 숱추가 계산기를 활용하세요.'>
+    <meta name='description' content='대전붙임머리 무끔 숱추가 계산기는 붙임머리 시술에 필요한 붙임머리 개수를 정확히 계산합니다. 정확한 숱추가 횟수 계산은 과도한 숱추가 시술을 방지할 수 있습니다. 자연스러운 붙임머리와 과소비 방지를 위해 숱추가 계산기 꼭 활용하세요.'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="navbar_logo">
             <i class="fas fa-vector-square"></i>
-            <a href="">튼튼한[무끔]붙임머리</a>
+            <a href="">[무끔]붙임머리</a>
         </div>
         
 
@@ -62,9 +62,10 @@
             붙임머리 숱추가 계산기
         </div>
         <div class="subtitle">
-            [무끔]Bigdata를 활용한 숱추가 예측 계산기입니다.<br>
-            이제 디자이너에게 숱추가 묻지말고<br>
-            '숱추가 계산기'로 당당하게 숱추가 요구하세요.
+            [무끔]빅데이터 기반 숱추가 계산기입니다.<br>
+            이제 디자이너에게 숱추가 횟수 묻지말고<br>
+            '숱추가 계산기'로 당당하게 요구하세요.<br>
+            (숱추가 1회 : 10쌍 기준)
         </div>
 
 
