--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
             붙임머리 숱추가 계산기
         </div>
         <div class="subtitle">
-            [무끔]빅데이터 기반 숱추가 계산기입니다.<br>
-            이제 디자이너에게 숱추가 횟수 묻지말고<br>
-            '숱추가 계산기'로 당당하게 요구하세요.<br>
-            (숱추가 1회 : 10쌍 기준)
+            [무끔]Bigdata 기반 숱추가 횟수 계산기입니다.<br>
+            이제 디자이너에게 숱추가 횟수 묻지 말고<br>
+            '숱추가 계산기'로 당당하게 요구하세요.
         </div>
 
 
