feat : 버튼 수정 및 내용 변경

--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
   
     <p>&nbsp;</p>
     <p></p>
+    <a id="naver" href="http://naver.me/GQ4Aaca5">
+        <button type="naver_link">
+        붙임머리 가격·시술·예약 정보 (Touch)
+        </button>
+        </a>
+    <p>&nbsp;</p>
+    </div>   <hr 
+    width="380px"
+    size="2.5px"
+    noshade color="black"
+    align="center"
+>
+    <p>&nbsp;</p>
     <p></p>
     <p></p>
 
@@ -179,6 +192,8 @@
       (붙임머리 전 숱추가 계산은 필수입니다.)
       </div>
       <p>&nbsp;</p>
+      <p></p>
+      <p></p>
       <p></p>
     
 
@@ -277,7 +292,7 @@
         
         <a id="naver" href="http://naver.me/GQ4Aaca5">
         <button type="naver_link">
-        붙임머리 가격·예약·시술정보·방문자리뷰 (Touch)
+        붙임머리 방문자리뷰 (Touch)
         </button>
         </a>
 
@@ -297,8 +312,7 @@
     <div class="bottom">
         <div class="bottom_content">
             <a>대한민국</a> ⓒ [무끔]붙임머리<br>
-            본 계산기는 지식재산권이 있는 특허입니다.<br>
-            (특허 : 5411545789)<br>
+            본 계산기는 지식재산권이 있습니다.<br>
             무단 전재와 무단 복제를 금함.<br><br>
 
             주소 및 연락처 : 대전시 유성구 유성대로654번길 145-1<br>
