--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div class="subtitle">
             [무끔]Bigdata 기반 숱추가 횟수 계산기입니다.<br>
-            이제 디자이너에게 숱추가 횟수 묻지 말고<br>
-            '숱추가 계산기'로 당당하게 요구하세요.
+            이제 디자이너에게 묻지 말고<br>
+            당당하게 숱추가 횟수 요구하세요.
         </div>
 
 
