--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta name="naver-site-verification" content="cf6096e92cd8457a2a3e7105b54de560425abcf1" />
-    <title>붙임머리 숱추가 계산기</title>
-    <meta name='description' content='대전붙임머리 무끔 숱추가 계산기는 붙임머리 시술에 필요한 붙임머리 개수를 정확히 계산합니다. 정확한 숱추가 횟수 계산은 과도한 숱추가 시술을 방지할 수 있습니다. 자연스러운 붙임머리와 과소비 방지를 위해 숱추가 계산기 꼭 활용하세요.'>
+    <title>대전붙임머리 숱추가 계산기</title>
+    <meta name='description' content='붙임머리에 필요한 붙임머리 개수 계산. 나에게 딱 알맞은 숱추가 횟수.'>
+    <meta name="대전붙임머리 숱추가 계산기" content="대전붙임머리, 붙임머리, 숱추가">
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +20,18 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/a90bf94e1d.js" crossorigin="anonymous"></script>
+
+        <!-- OG 제목 -->
+        <meta property="og:title" content="붙임머리 숱추가 계산기">
+        <!-- OG 설명 -->
+        <meta property="og:description" content="붙임머리에 필요한 붙임머리 개수 계산. 나에게 딱 알맞은 숱추가 횟수.">
+        <!-- OG 이미지 URL -->
+        <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FyeP61%2FbtsGeznfH8L%2F1IbYsb9PLIjHiaLJjjK6fK%2Fimg.jpg">
+        <!-- 웹페이지 URL -->
+        <meta property="og:url" content="https://mooggem.netlify.app/">
+        <!-- OG 타입: website, article, video 등 -->
+        <meta property="og:type" content="website">
+
 </head>
 <body>
     <nav class="navbar">
