--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- OG 제목 -->
         <meta property="og:title" content="붙임머리 숱추가 계산기">
         <!-- OG 설명 -->
-        <meta property="og:description" content="나에게 딱 맞는 붙임머리 개수.">
+        <meta property="og:description" content="나에게 딱 맞는 붙임머리 개수">
         <!-- OG 이미지 URL -->
         <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FyeP61%2FbtsGeznfH8L%2F1IbYsb9PLIjHiaLJjjK6fK%2Fimg.jpg">
         <!-- 웹페이지 URL -->
