--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="naver-site-verification" content="cf6096e92cd8457a2a3e7105b54de560425abcf1" />
     <title>대전붙임머리 숱추가 계산기</title>
-    <meta name='description' content='붙임머리에 필요한 붙임머리 개수 계산. 나에게 딱 알맞은 숱추가 횟수.'>
+    <meta name='description' content='나에게 딱 맞는 붙임머리 개수 계산, 정확한 숱추가 횟수, 과한 숱추가 방지.'>
     <meta name="대전붙임머리 숱추가 계산기" content="대전붙임머리, 붙임머리, 숱추가">
     <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
