--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta name="naver-site-verification" content="baaca07129d8009bd436b61ceb5f33affcc4bbc2" />
+    <meta name="google-site-verification" content="HgFFfpCGGBxKEjyvwsG3GQRZi2V-hJZ6FHpYhzNqDig" />
 
     <title>대전붙임머리 숱추가계산기</title>
     <meta name='description' content='나에게 딱 맞는 붙임머리 개수 계산, 정확한 숱추가 횟수, 과한 숱추가 방지.'>
