--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>대전붙임머리 숱추가계산기</title>
     <meta name='description' content='나에게 딱 맞는 붙임머리 개수 계산, 정확한 숱추가 횟수, 과한 숱추가 방지.'>
-    <meta name="대전붙임머리 숱추가 계산기" content="대전붙임머리, 붙임머리, 숱추가">
+    <meta name="대전붙임머리 숱추가 계산기" content="대전붙임머리, 붙임머리, 숱추가, 붙임머리숱추가, 무끔">
     <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
