feat:내용변경(나에게알맞은)

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
 
         <div id="btn_medi">
         <button type="button" onclick="submit();" value="예상 숱추가">
-        예상 숱 추가 확인(Touch)
+        예상 숱 추가 횟수 확인(Touch)
         </button>
         </div>
 
         <p></p>
-        <div class="result_text"> 고객님의 예상 숱 추가 횟수는
+        <div class="result_text"> 나에게 알맞은 숱 추가 횟수
 
             <input type="text" id="result_1" size="3"> ~
             <input type="text" id="result_2" size="3">
-            회 입니다.
+            회
         </div>
     </div>
     <script src="script.js"></script>
@@ -191,7 +191,7 @@
     <p></p>
     <a id="naver" href="https://m.place.naver.com/hairshop/1432752159/home">
         <button type="naver_link">
-        붙임머리 가격·시술·예약 정보 (Touch)
+        붙임머리 가격·시술 정보 (Touch)
         </button>
         </a>
     <p>&nbsp;</p>
