feat:슬라이드바

--- a/index.html
+++ b/index.html
@@ -149,9 +149,20 @@
         </div>
 
         <div id="btn_medi">
-        <button type="button" onclick="submit();" value="예상 숱추가">
-        예상 숱 추가 횟수 확인(Touch)
-        </button>
+            <input type="checkbox" id="result_check" onclick="submit();" value="예상 숱추가">
+                <label for="result_check">예상 숱 추가 횟수 확인 (Touch)
+                    <span></span>
+                </label>
+                <div class="sidebar">
+                    <p></p>
+                    <a id="naver" href="https://m.place.naver.com/hairshop/1432752159/home">
+                        <button type="naver_link">
+                        '숱추가 계산기'이용 고객님께 제공되는<br>
+                        붙임머리 가격·시술 정보 (Touch)
+                        </button>
+                    </a>
+                </div>
+            </input>
         </div>
 
         <p></p>
