--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <a id="naver" href="https://m.place.naver.com/hairshop/1432752159/home">
                         <button type="naver_link">
                         '숱추가 계산기'이용 고객님께 제공되는<br>
-                        붙임머리 가격·시술 정보 (Touch)
+                        붙임머리 전용 빗 100% 공짜 이벤트 (Touch)
                         </button>
                     </a>
                 </div>
@@ -188,7 +188,13 @@
     >
 <div align="center">
   <figure class="image_wrapper">
-    <iframe class="child" width="320px" height="320px" src="https://www.youtube.com/embed/vKO4YxsKciw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="child" 
+    width="320px" height="320px"
+    src="https://www.youtube.com/embed/vKO4YxsKciw"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
   </figure> 
 </div>   <hr 
     width="380px"
@@ -198,20 +204,6 @@
     >
 
   
-    <p>&nbsp;</p>
-    <p></p>
-    <a id="naver" href="https://m.place.naver.com/hairshop/1432752159/home">
-        <button type="naver_link">
-        붙임머리 가격·시술 정보 (Touch)
-        </button>
-        </a>
-    <p>&nbsp;</p>
-    </div>   <hr 
-    width="380px"
-    size="2.5px"
-    noshade color="black"
-    align="center"
->
     <p>&nbsp;</p>
     <p></p>
     <p></p>
@@ -324,7 +316,7 @@
         
         <a id="naver" href="https://m.place.naver.com/hairshop/1432752159/review">
         <button type="naver_link">
-        붙임머리 실제 후기 (Touch)
+        붙임머리 가격·시술 정보 (Touch)
         </button>
         </a>
 
