--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
     
     <div class="main">
-        <div class="title">
+        <h1><div class="title">
             붙임머리 숱추가 계산기
-        </div>
-        <div class="subtitle">
-            [무끔]Bigdata 기반 숱추가 횟수 계산기입니다.<br>
-            이제 디자이너에게 묻지 말고<br>
-            당당하게 숱추가 횟수 요구하세요.
-        </div>
+        </div></h1>
+        <h2><div class="subtitle">
+            [무끔]BigData 기반 숱추가 계산기입니다.<br>
+            나에게 딱 알맞은 붙임머리 개수 계산은<br>
+            붙임머리 성공의 첫걸음입니다.
+        </div></h2>
 
 
         <div class="prices">
