feat:로봇 및 매니패스트

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- OG 이미지 URL -->
         <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FyeP61%2FbtsGeznfH8L%2F1IbYsb9PLIjHiaLJjjK6fK%2Fimg.jpg">
         <!-- 웹페이지 URL -->
-        <meta property="og:url" content="https://mooggem.netlify.app/">
+        <meta property="og:url" content="https://mooggem.shop/">
         <!-- OG 타입: website, article, video 등 -->
         <meta property="og:type" content="website">
 
