--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fmx96v%2FbtsGeQPNi5b%2FCL9Rx5Jkl9ocOC6wUlV5b1%2Fimg.png">
         <link rel="icon" type="image/png" sizes="32x32" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbgqfWm%2FbtsGewKSU1z%2FigMq9eBXNCrlNFeQMSCw2K%2Fimg.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbIuMro%2FbtsGcPdMumL%2FMHsXSLn9BsRkfuc988Bdl1%2Fimg.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FPu3hu%2FbtsGecMJNYY%2FlaMaLWwv6O9EWBgxg57M81%2Fimg.png">
         <link rel="manifest" href="/site.webmanifest">
 
 </head>
