feat:매니패스트경로재설정

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbgqfWm%2FbtsGewKSU1z%2FigMq9eBXNCrlNFeQMSCw2K%2Fimg.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbIuMro%2FbtsGcPdMumL%2FMHsXSLn9BsRkfuc988Bdl1%2Fimg.png">
         <link rel="icon" type="image/png" sizes="512x512" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FPu3hu%2FbtsGecMJNYY%2FlaMaLWwv6O9EWBgxg57M81%2Fimg.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="/webmanifest.json">
 
 </head>
 <body>
